--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  
+  
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js --prefix client client",
+    "dev": "nodemon index.js --ignore client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
